--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.polemon</groupId>
     <artifactId>Template</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
-    <name>template</name>
-    <description>template</description>
+    <name>Template</name>
+    <description>Template</description>
 
     <properties>
         <java.version>17</java.version>
